consolidated maven and gradle instructions to one